Tiny change in article bibtex

--- a/citation.bib
+++ b/citation.bib
@@ -1,4 +1,4 @@
-@article{Ziegler2014542,
+@article{Ziegler2014b,
 title = "A finite-element reciprocity solution for \{EEG\} forward modeling with realistic individual head models ",
 journal = "NeuroImage ",
 volume = "103",
